Bug 133094 - UI: Tabbed toolbar: The table border color picker expands on every color change
Summary: UI: Tabbed toolbar: The table border color picker expands on every color change
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-16 16:25 UTC by Telesto
Modified: 2020-05-26 15:06 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
how it looks for me under gen (988.75 KB, video/webm)
2020-05-25 07:52 UTC, Caolán McNamara
Details
The problem on Windows with Tabbed UI (141.13 KB, image/png)
2020-05-25 08:11 UTC, NISZ LibreOffice Team
Details
Animation of the issue (645.90 KB, image/gif)
2020-05-25 08:15 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-16 16:25:51 UTC
Description:
UI: Tabbed toolbar: The table border color picker expands on every color change

Steps to Reproduce:
1. Open Writer
2. Tabbed toolbar
3. Insert a table
4. Change the border color a few times

Actual Results:
Drop down expands every time

Expected Results:
Shouldn't expand


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha1+ (x64)
Build ID: f9790da286f2d2fa47f1748f8cfa6172c6622ca3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-05-16 16:31:10 UTC
Appears to be a recent change..
Comment 2 Heiko Tietze 2020-05-18 11:09:36 UTC
Border Color remains block on the widget while the color is applied to the table. Does not happen with the table toolbar's widget (last use color remains active and allows to apply again without opening the picker). No issue with 6.3.

Version: 7.0.0.0.alpha1+
Build ID: 5fccbf0f6f55d697efa20d0d2282d39631fe6c59
CPU threads: 8; OS: Linux 5.6; UI render: default; VCL: gtk3; 
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 andreas_k 2020-05-22 23:10:52 UTC
I don't get the issue.
Comment 4 Gabor Kelemen (Collabora) 2020-05-24 22:22:49 UTC
It's the uno:FrameLineColor widget (I noticed this for image border color selector, same thing) since:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=40fe5b93bc0838e04b46bfc7942d1ee6a2482ce0

author	Caolán McNamara <caolanm@redhat.com>	2020-01-02 14:45:32 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-01-06 16:44:21 +0100

weld AreaPropertyPanel

Adding CC to: Caolán McNamara
Comment 5 Caolán McNamara 2020-05-25 07:52:26 UTC
Created attachment 161247 [details]
how it looks for me under gen

I don't see it, am I using the wrong elements to see this ?
Comment 6 NISZ LibreOffice Team 2020-05-25 08:11:26 UTC
Created attachment 161248 [details]
The problem on Windows with Tabbed UI

It's wrong on the Tabbed notebookbar, not in the dialog with:

Version: 7.0.0.0.alpha1+ (x64)
Build ID: 21875558f6c478f07d68ff39e025d7ffd451674f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

I also saw it yesterday with GTK and QT on Linux - have not tried gen though.
Comment 7 Heiko Tietze 2020-05-25 08:15:08 UTC
Created attachment 161250 [details]
Animation of the issue

The color picker always expands and doesn't replace black with the applied color (same for gen and gtk). It works well on the (classic) table toolbar and also for the cell background control below.
Comment 8 Caolán McNamara 2020-05-25 16:05:06 UTC
I imagine comment #4 is the problem described in comment #1, that super-stretched color toolbar, something I'm not seeing under gen/gtk (yet). I presume from comment #1 that it gets wider on each use.

Comment #8 mentions "always expands" but the animation there shows what I get, i.e. the toolbar doesn't grow in width on each use. The lack of update of the color seems to be the issue there. Though that might be due to the same underlying problem of comment #1
Comment 9 Caolán McNamara 2020-05-25 16:15:23 UTC
hmph, I can see the problem of comment #1 in the bisect repo, if not my most recent local build
Comment 10 Telesto 2020-05-25 19:35:55 UTC
The issue is gone. It was about this: attachment 161248 [details] (The problem on Windows with Tabbed UI)
Version: 7.0.0.0.alpha1+ (x64)
Build ID: b587de60d4e6aa96238766272d94f1499b22f696
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 11 Caolán McNamara 2020-05-25 19:59:32 UTC
commit 40fe5b93bc0838e04b46bfc7942d1ee6a2482ce0
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Jan 2 14:45:32 2020 +0000

    weld AreaPropertyPanel

broke it by assuming that a SidebarToolBox is always in a sidebar, but NotebookbarToolBox inherits from it and is not in the sidebar, but in the NotebookBar. So it became a non-split button, which was the problem both of Comment #1 and Comment #8

commit 0ed93efdb8f571d873a2f5b9f96938ea796199fd
Author: andreas kainz <kainz.a@gmail.com>
Date:   Wed May 6 23:35:42 2020 +0200

    writer notebookbar table background color less space needed

landed recently, which changed the toolbar_style "both-horiz" property to "icons" so the toolitem text isn't shown anymore which has the sideeffect of make the growing width problem go away.

https://gerrit.libreoffice.org/c/core/+/94806 will make it a split-button again in the NotebookbarBar case which should fix Comment #8. And would also fix Comment #1 if the toolbar_style was set back to both-horiz again. I'll leave that alone on the assumption that's a desirable change regardless.
Comment 12 andreas_k 2020-05-25 21:00:31 UTC
Ah I removed the show label setting cause of this long layout. I think it's ok to show icon only.
Comment 13 Heiko Tietze 2020-05-26 08:36:17 UTC
(In reply to Caolán McNamara from comment #11)
> https://gerrit.libreoffice.org/c/core/+/94806 

Thanks for the explanation. Not sure how happy developers will be in future to see the sidebar object with bool mbSideBar; to set derivates as non-sidebar thing. Hard to follow ;-).

Thanks for fixing it!
Comment 14 Commit Notification 2020-05-26 15:00:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2dd7c6a441f48a23dcbff1ebe24bdf21666c4ff0

tdf#133094 NotebookbarToolBox is not in the sidebar

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.