tdf#133094 NotebookbarToolBox is not in the sidebar

though it is inheriting from SidebarToolBox and we're distinguish the sidebar
case from the non-sidebar case wrt certain color toolbuttons

Change-Id: Ieffe45adfab95d426bb36296ee3428b6bd3dbd3f