include/sfx2/weldutils.hxx
@@ -35,6 +35,7 @@ private:
     SvtMiscOptions m_aToolbarOptions;
     weld::Toolbar* m_pToolbar;
     weld::Builder* m_pBuilder;
+    bool m_bSideBar;
 
     DECL_LINK(SelectHdl, const OString&, void);
     DECL_LINK(ToggleMenuHdl, const OString&, void);
@@ -50,7 +51,8 @@ private:
 public:
     // fill in the label and icons for actions and dispatch the action on item click
     ToolbarUnoDispatcher(weld::Toolbar& rToolbar, weld::Builder& rBuilder,
-                         const css::uno::Reference<css::frame::XFrame>& rFrame);
+                         const css::uno::Reference<css::frame::XFrame>& rFrame,
+                         bool bSideBar = true);
 
     css::uno::Reference<css::frame::XToolbarController>
     GetControllerForCommand(const OUString& rCommand) const;
