sfx2/source/notebookbar/NotebookbarTabControl.cxx
@@ -126,6 +126,7 @@ public:
     : sfx2::sidebar::SidebarToolBox( pParent )
     {
         mbUseDefaultButtonSize = false;
+        mbSideBar = false;
         SetToolboxButtonSize(ToolBoxButtonSize::Small);
     }
 
